--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -551,8 +551,8 @@ jobs:
               exit 1
             fi
       # Here's where you will add some code to rollback on failure  try
-      - destroy-environment 
-      - revert-migrations  
+      # - destroy-environment 
+      # - revert-migrations  
 
   cloudfront-update:
     docker:
@@ -607,13 +607,14 @@ jobs:
             name: Remove old stacks and files
             command: |
               # echo "NEW_WORKFLOW_ID = $NEW_WORKFLOW_ID"
-              # export STACKS=($(aws cloudformation list-stacks \
-              #   --query "StackSummaries[*].StackName" \
-              #   --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+              export STACKS=($(aws cloudformation list-stacks \
+                --query "StackSummaries[*].StackName" \
+                --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+              echo Stack names: "${STACKS[@]}"
 
               export OldWorkflowID=$(aws cloudformation \
-                      list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-                      --no-paginate --output text)
+                  list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                  --no-paginate --output text)
 
               echo OldWorkflowID: "${OldWorkflowID}"
               echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
