--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -241,9 +241,7 @@ jobs:
             mkdir -p /tmp/workspace
             cd .circleci/ansible
             echo [all] > /tmp/workspace/inventory.txt
-            aws ec2 describe-instances \ 
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \ 
-              --output text >> /tmp/workspace/inventory.txt
+            aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --output text >> /tmp/workspace/inventory.txt
             cat /tmp/workspace/inventory.txt
             
       - run: 
