--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -463,10 +463,11 @@ jobs:
     steps:
       # Checkout code from git
       - checkout
-      - add_ssh_keys:
-          fingerprints: ["dd:4d:df:be:88:24:a8:81:ee:eb:95:fb:71:da:ee:38"] # You can get this ID in the section where you registered the SSH Key
       - attach_workspace:
           at: /tmp/workspace
+      - add_ssh_keys:
+          fingerprints: ["dd:4d:df:be:88:24:a8:81:ee:eb:95:fb:71:da:ee:38"] # You can get this ID in the section where you registered the SSH Key
+      
       # - run:
       #     name: Install dependencies
       #     command: |
@@ -521,18 +522,17 @@ jobs:
             npm i
             npm run build
             cd ..
-            tar -C backend -czvf artifact.tar.gz .
             cd .circleci/ansible
             mkdir files
             cd files
-            
+            tar -C ../../../backend -czvf artifact.tar.gz .
             cd ../
             # mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
             # mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
             # cd .circleci/ansible
             echo "Contents of the inventory.txt file is ------"
-            cat inventory.txt
-            # ansible-galaxy install weareinteractive.environment
+            cat /tmp/workspace/inventory.txt
+            ansible-galaxy install weareinteractive.environment
             ansible-playbook -i /tmp/workspace/inventory.txt deploy-backend.yml            
       # Here's where you will add some code to rollback on failure 
       - destroy-environment 
