--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -525,6 +525,8 @@ jobs:
             tar -C backend -czvf artifact.tar.gz .
             mv artifact.tar.gz /tmp
       - run:
+          name: run ansible playbook
+          command: |
             cd .circleci/ansible
             echo "Contents of the inventory.txt file is ------"
             cat /tmp/workspace/inventory.txt
