--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -530,7 +530,7 @@ jobs:
             cd .circleci/ansible
             echo "Contents of the inventory.txt file is ------"
             cat /tmp/workspace/inventory.txt
-            ansible-galaxy install weareinteractive.environment
+            # ansible-galaxy install weareinteractive.environment
             ansible-playbook -i /tmp/workspace/inventory.txt deploy-backend.yml
             # mkdir files
             # cd files
