--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -534,6 +534,13 @@ jobs:
             npm i
             npm run build
             cd ..
+            tar -C backend -czvf artifact.tar.gz .
+            mv artifact.tar.gz /tmp
+            cd .circleci/ansible
+            echo "Contents of the inventory.txt file is ------"
+            cat /tmp/workspace/inventory.txt
+            # ansible-galaxy install weareinteractive.environment
+            ansible-playbook -i /.circleci/ansible/inventory.txt deploy-backend.yml -vvv
             #intial
             # cd .circleci/ansible
             # mkdir files
@@ -544,13 +551,6 @@ jobs:
             # cat /tmp/workspace/inventory.txt
             # ansible-playbook -i /tmp/workspace/inventory.txt deploy-backend.yml
             #intial ended
-            tar -C backend -czvf artifact.tar.gz .
-            mv artifact.tar.gz /tmp
-            cd .circleci/ansible
-            echo "Contents of the inventory.txt file is ------"
-            cat /tmp/workspace/inventory.txt
-            # ansible-galaxy install weareinteractive.environment
-            ansible-playbook -i /tmp/workspace/inventory.txt deploy-backend.yml
       # - run:
       #     name: run ansible playbook
       #     command: |
