--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -455,17 +455,6 @@ jobs:
       # # Docker image here that supports Ansible
       # - image: python:3.7-alpine3.11
       - image: cimg/base:stable
-    environment:
-        TYPEORM_MIGRATIONS: $TYPEORM_MIGRATIONS
-        TYPEORM_MIGRATIONS_DIR: $TYPEORM_MIGRATIONS_DIR
-        TYPEORM_CONNECTION: $TYPEORM_CONNECTION
-        TYPEORM_HOST: $TYPEORM_HOST
-        TYPEORM_USERNAME: $TYPEORM_USERNAME
-        TYPEORM_PASSWORD: $TYPEORM_PASSWORD
-        TYPEORM_DATABASE: $TYPEORM_DATABASE
-        TYPEORM_PORT: $TYPEORM_PORT
-        TYPEORM_ENTITIES: $TYPEORM_ENTITIES
-
     steps:
       # Checkout code from git
       - checkout
@@ -484,21 +473,6 @@ jobs:
       - install_awscli
       - install_ansible
       - install_nodejs
-      # - run:
-      #     name: create environment files
-      #     command: |
-      #       echo ENVIROMENT=production >> "backend/.env"
-      #       echo NODE_ENV=production >> "backend/.env"
-      #       echo TYPEORM_CONNECTION=postgres >> "backend/.env"
-      #       echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> "backend/.env"
-      #       echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >>
-      #       "backend/.env"
-      #       echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> "backend/.env"
-      #       echo TYPEORM_HOST=$TYPEORM_HOST >> "backend/.env"
-      #       echo TYPEORM_PORT=$TYPEORM_PORT >> "backend/.env"
-      #       echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> "backend/.env"
-      #       echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> "backend/.env"
-      #       echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "backend/.env"
       # - run:
       #     name: Install dependencies
       #     command: |
@@ -534,27 +508,27 @@ jobs:
             npm i
             npm run build
             cd ..
-
-            #intial
+            tar -C backend -czvf artifact.tar.gz .
+            mv artifact.tar.gz /tmp
             cd .circleci/ansible
-            mkdir files
-            cd files
-            tar -C ../../../backend -czvf artifact.tar.gz .
-            # mv artifact.tar.gz /tmp
-            cd ../
-            echo "Contents of the inventory.txt file is --------"
+            echo "Contents of the inventory.txt file is ------"
             cat /tmp/workspace/inventory.txt
-            ansible-playbook -i /tmp/workspace/inventory.txt deploy-backend.yml -vvv
-            #intial ended
+            ansible-playbook -i /.circleci/ansible/inventory.txt deploy-backend.yml -vvv
 
-
-            # tar -C backend -czvf artifact.tar.gz .
-            # mv artifact.tar.gz /tmp
+            # #intial
             # cd .circleci/ansible
-            # echo "Contents of the inventory.txt file is ------"
+            # mkdir files
+            # cd files
+            # tar -C ../../../backend -czvf artifact.tar.gz .
+            # # mv artifact.tar.gz /tmp
+            # cd ../
+            # echo "Contents of the inventory.txt file is --------"
             # cat /tmp/workspace/inventory.txt
-            # ansible-galaxy install weareinteractive.environment
-            # ansible-playbook -i /.circleci/ansible/inventory.txt deploy-backend.yml -vvv
+            # ansible-playbook -i /tmp/workspace/inventory.txt deploy-backend.yml -vvv
+            # #intial ended
+
+
+            
             
       # - run:
       #     name: run ansible playbook
