--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -575,17 +575,17 @@ jobs:
             #your code here
             export BACKEND_IP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             # # BACKEND_IP = curl https://kvdb.io/XKqqQi6NXVQbTawYKbZxy/Backend_ip
-            cat BACKEND_IP
-            export API_URL="http://${BACKEND_IP}:3030"
-            echo $API_URL
-            sleep 20s
+            # cat BACKEND_IP
+            # export API_URL="http://${BACKEND_IP}:3030"
+            # echo $API_URL
+            # sleep 20s
             # if curl -s --connect-timeout 5 "${API_URL}/api/status" | grep "ok"; then return 0; else return 0; fi
-            if curl "${API_URL}/api/status" | grep "ok"
-            then 
-              exit 0
-            else
-              exit 1
-            fi
+            # if curl "${API_URL}/api/status" | grep "ok"
+            # then 
+            #   exit 0
+            # else
+            #   exit 1
+            # fi
             echo "Well done my boy"
 
       - run:
@@ -601,8 +601,8 @@ jobs:
               exit 1
             fi
       # Here's where you will add some code to rollback on failure  try
-      # - destroy-environment 
-      # - revert-migrations  
+      - destroy-environment 
+      - revert-migrations  
 
   cloudfront-update:
     docker:
